--- a/DLB-PROJECT/src/main/resources/application-pe.yml
+++ b/DLB-PROJECT/src/main/resources/application-pe.yml
@@ -1,4 +1,10 @@
  #data source configuration
+ 
+ spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/pages/
+      suffix: .jsp
   datasource:
     url: jdbc:oracle:thin:@localhost:1521:orcl
     username: scott
