--- a/DLB-PROJECT/src/main/resources/application.properties
+++ b/DLB-PROJECT/src/main/resources/application.properties
@@ -5,8 +5,13 @@ server.servlet.context-path=/user
 
 
 #View Resolver Properties
-spring.mvc.view.prefix=/views/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix= WEB-INF/pages/
+spring.mvc.view.suffix= .jsp
+
+
+
+
+
 
 ## DB Details
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
