--- a/DLB-PROJECT/src/main/resources/application.properties
+++ b/DLB-PROJECT/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=9092
 
-server.servlet.context-path=/user
+
 
 
 #View Resolver Properties
@@ -14,9 +14,9 @@ spring.mvc.view.suffix= .jsp
 
 
 ## DB Details
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-spring.datasource.username=system
-spring.datasource.password=manager
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=scott
+spring.datasource.password=shubh
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 ##ORM Details
