--- a/DLB-PROJECT/src/main/resources/application.properties
+++ b/DLB-PROJECT/src/main/resources/application.properties
@@ -9,19 +9,10 @@ spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix= .jsp
 
 
+spring.servlet.multipart.max-file-size: 100MB
+spring.servlet.multipart.max-request-size: 100MB
 
 
 
-
-## DB Details
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-spring.datasource.username=system
-spring.datasource.password=manager
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
-##ORM Details
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=pe
 
