--- a/DLB-PROJECT/pom.xml
+++ b/DLB-PROJECT/pom.xml
@@ -21,7 +21,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- H2 Database -->
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -32,7 +37,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -57,8 +62,8 @@
 			<artifactId>jstl</artifactId>
 
 		</dependency>
-		
-		
+
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -71,7 +76,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
 		</dependency>
-		
+
 
 
 
