--- a/DLB-PROJECT/src/main/resources/application.properties
+++ b/DLB-PROJECT/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.profiles.active=shubh
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.protocol = smtp
 spring.mail.username=apnadukaansocial@gmail.com
 spring.mail.password=Dlb@apna$dukaan
 spring.mail.properties.mail.smtp.starttls.enable=true
