added spring security

--- a/DLB-PROJECT/src/main/resources/application.properties
+++ b/DLB-PROJECT/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=9092
 
-server.servlet.context-path=/user
+spring.application.name=DLB
 
 
 #View Resolver Properties
@@ -33,5 +33,14 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=50000
 spring.mail.properties.mail.smtp.timeout=50000
 spring.mail.properties.mail.smtp.writetimeout=50000
+
+logging.pattern.console=[DLB] [%X{USER_NAME}] [%X{REMOTE_IP}] [%X{REQUEST_ID}] [%-5level] %logger{36} [%-4L] - %msg%n
+logging.level.com.dlb=INFO
+logging.level.com.dlb.controller= DEBUG  
+logging.level.com.dlb.security= INFO
+logging.level.com.dlb.service= DEBUG
+logging.level.com.dlb.validation= DEBUG
+
+
 
 
