--- a/DLB-PROJECT/src/main/resources/application.properties
+++ b/DLB-PROJECT/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=9092
 
-spring.application.name=DLB
+#spring.application.name=DLB
 
 
 #View Resolver Properties
@@ -15,7 +15,7 @@ spring.servlet.multipart.max-request-size: 100MB
 
 
 
-spring.profiles.active=dipak
+spring.profiles.active=pe
 
 
 
@@ -25,8 +25,8 @@ spring.profiles.active=dipak
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol = smtp
-spring.mail.username=apnadukaansocial@gmail.com
-spring.mail.password=Dlb@apna$dukaan
+spring.mail.username=socialdukansocial@gmail.com
+spring.mail.password=Dukan@12345
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
