--- a/Udajahaja/udajahaja-admin/src/main/resources/application.yml
+++ b/Udajahaja/udajahaja-admin/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
       
       
       
