--- a/Udajahaja/udajahaja-admin/src/main/resources/application.properties
+++ b/Udajahaja/udajahaja-admin/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
+spring.application.name=udajahaja-admin
 server.port=8001
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
