--- a/Zull-App-1/pom.xml
+++ b/Zull-App-1/pom.xml
@@ -48,6 +48,16 @@
     <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     <version>3.0.3</version>
 </dependency>
+<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+			<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.6.1</version>
+		</dependency>
 
 
 		<!--<dependency>
