--- a/udajahaja-user/pom.xml
+++ b/udajahaja-user/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.4</version>
+</dependency> 
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
