--- a/Zull-App-1/pom.xml
+++ b/Zull-App-1/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.udajahaja</groupId>
 	<artifactId>Zull-App-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>Zull-App-1</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -68,6 +68,14 @@
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
     <scope>runtime</scope>
+</dependency>
+<dependency>
+	<groupId>org.springframework.kafka</groupId>
+	<artifactId>spring-kafka</artifactId>
+</dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
 </dependency>
 	</dependencies>
 
