--- a/Zull-App-1/src/main/resources/application.properties
+++ b/Zull-App-1/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 
 spring.application.name=udajahaja-admin
 server.port=8001
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=h2
