--- a/udajahaja-user/src/main/resources/application.properties
+++ b/udajahaja-user/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 
 spring.application.name=udajahaja-user
 server.port=8002
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=h2
 
