--- a/security-test/src/main/resources/application.properties
+++ b/security-test/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8003
 spring.application.name=Zull-App
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+ribbon.ReadTimeout= 60000
 
 zuul.routes.udajahaja-admin.path=/api/admin/**
 zuul.routes.udajahaja-admin.service-id=circuit-breaker
-zuul.routes.udajahaja-admin.url=http://localhost:8001/api/admin/
+zuul.routes.udajahaja-admin.url=http://localhost/api/admin/
 
 zuul.routes.udajahaja-user.path=/api/user/**
 zuul.routes.udajahaja-user.service-id=circuit-breaker
-zuul.routes.udajahaja-user.url=http://localhost:8002/api/user/
+zuul.routes.udajahaja-user.url=http://localhost/api/user/
